# 100-cities-for-kids

./: .gitignore  README.md  cities.md  hugo.yaml
content/: _index.md
docs/: 404.html  en.search-data.min.1841c50d205bfd6fe06e2f202e46c277856611f446edf52374ea58b289ef5644.json  en.search-data.min.23ab121e9c173387db18497fe37b2fac7dbfd988646991b9b9044eea9679b90b.json  en.search-data.min.2c1af79b41a0b565a6a8df3fc94a43894c8307cc449637cd2abcb01694d1abbb.json  en.search-data.min.345dd7c2344be74ed47292dee01d8fc86bf630dbeb3e1767c93751831c96979c.json  en.search-data.min.38034b1bea7449ded011e705bc9d9a7cf8f11058e12a0bb5a221ebbb277693b0.json  en.search-data.min.4837122ea67ccb42e040168cd371c913e9c1c14069ec2aed44d170c78c0bbbff.json  en.search-data.min.5ff0597a16e5bad8f1c2f5d6ae00a1dcc157f594fe61539214820eb1234d83a7.json  en.search-data.min.72a5ee592f0eff7fea1d04abf2f053eae06976b4672c9df9cfd1f11856cb50ae.json  en.search-data.min.819a374d10abd3f9b9d038711a8cc6246ab8fcfbb118fee261dd31c988330b8d.json  en.search-data.min.8d9927848a792180fdee4794b9fefcb02123859df9f61809fc0a8d1ae725151b.json  en.search-data.min.94f341491c9e9ed4caf58ba7773461dcab1a1590faf6f3b25359852b166739b8.json  en.search-data.min.97f5d2f5cf43878b9a29d059055ff1c48d879dd1da3dcbb8bb1cb11a969756d4.json  en.search-data.min.afb013096f6fbf21f4bf46345339516335ce6a9a0f27d63cc5dcd8140ea1307c.json  en.search-data.min.afff4686069aeaed1a637010104d7020b42068b17d188e88194a98a6b13e5199.json  (+35 more)
scripts/: generate-city-article.py  generate_city_article.py  post-process.py  pyproject.toml
web/: index.html  package-lock.json  package.json  (+1 more)
(+272 files in other folders)
