[project]
name = "100CitiesForKids"
version = "0.1.0"
description = "Scripts for the 100 Cities for Kids project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "dotenv>=0.9.9",
    "openai>=1.66.3",
    "tojyutping>=3.2.0",
    "typer>=0.15.2",
]

[project.scripts]
generate-city-article = "generate-city-article:app"
