[project]
name = "100CitiesForKids"
version = "0.1.0"
description = "Scripts for the 100 Cities for Kids project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "tojyutping>=3.2.0",
    "typer>=0.15.2",
]

[project.scripts]
generate-city-article = "generate-city-article:app"
